--- a/WEEK 1/Import_Data.ipynb
+++ b/WEEK 1/Import_Data.ipynb
@@ -16,14 +16,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1f4909d-d067-42cc-a95f-1a7aee42757a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "ce4b9f3e-1138-4185-b007-165915108feb",
    "metadata": {},
@@ -79,7 +71,7 @@
     }
    ],
    "source": [
-    "plot_anat(anat)"
+    "plotting.plot_anat(anat)"
    ]
   },
   {
@@ -110,7 +102,7 @@
     }
    ],
    "source": [
-    "plot_epi(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
+    "plotting.plot_epi(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
    ]
   },
   {
@@ -141,7 +133,7 @@
     }
    ],
    "source": [
-    "plot_img(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
+    "plotting.plot_img(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
    ]
   },
   {
@@ -172,7 +164,7 @@
     }
    ],
    "source": [
-    "plot_anat(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
+    "plotting.plot_anat(mean_img(run1), cut_coords = [10,10,10], display_mode = 'mosaic')"
    ]
   },
   {
@@ -213,7 +205,7 @@
     }
    ],
    "source": [
-    "plot_epi(volume_1, cut_coords = [4,4,4], display_mode = 'mosaic')"
+    "plotting.plot_epi(volume_1, cut_coords = [4,4,4], display_mode = 'mosaic')"
    ]
   },
   {
@@ -375,7 +367,7 @@
     }
    ],
    "source": [
-    "plot_carpet(run1,t_r = 2)"
+    "plotting.plot_carpet(run1,t_r = 2)"
    ]
   },
   {
@@ -980,7 +972,7 @@
     }
    ],
    "source": [
-    "plot_event([events1 , events2], figsize = (15,5))\n",
+    "plotting.plot_event([events1 , events2], figsize = (15,5))\n",
     "plt.show()\n"
    ]
   },
